# cmake_tutorial

./: README.md
advanced_process/cmake_var/: CMakeLists.txt
advanced_process/cxx_python/: CMakeLists.txt  Makefile  my_needle.ipynb
advanced_process/run_cmd/: CMakeLists.txt
advanced_process/third_package/: CMakeLists.txt
brief_process/Demo1/: CMakeLists.txt  main.cpp
brief_process/Demo2/: CMakeLists.txt  main.cpp  strUtils.cpp  strUtils.hpp
brief_process/Demo3/: CMakeLists.txt  main.cpp
brief_process/Demo3/MyInclude/: CMakeLists.txt  aroundCenter.cpp  aroundCenter.hpp
brief_process/Demo3/StrUtils/: CMakeLists.txt  palindrome.cpp  palindrome.hpp
